# toy_fastapi_pyscript

./: .tool-versions  Makefile  README.md  main.py  pyproject.toml
static/: process.py
templates/: pyscript.html
