[tool.poetry]
name = "fast_ui"
version = "0.1.0"
description = "A pyscript demo using fast API as a server"
authors = ["Ryan Lett <ryan.james.lett@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.76.0"}
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
uvicorn = {extras = ["standard"], version = "^0.17.6"}
arel = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
